--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<span class="sr-only">Toggle navigation</span>
 						<i class="fa fa-bars"></i>
 						</button>
-						<a class="navbar-logo" href="http://www.manmanerwan.cn">
+						<a class="navbar-logo" href="http://manmanerwan.cn">
 							<img src="./img/logo.png" width="37" height="37">
 							慢慢儿玩
 						</a>
