--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 <title>慢慢儿玩 - 在线图像编辑工具</title>
+<meta name="baidu_ssp_verify" content="477b9d0e524bb9a0adfeb0a557e506ae">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#ed8f31">
 
