--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 									<ul>
 										<li>把 “高斯模糊” 和 “数值” 面板添加到网格视图中</li>
 										<li>图像的来源连接到 “输入图片” 端口</li>
-										<li>“数值” 的输出端与 “猫虎参数” 端口连接</li>
+										<li>“数值” 的输出端与 “模糊参数” 端口连接</li>
 										<li>在 “数值” 面板上点击 “+” 或 “-” 按钮来分别选择百位数、十位数和个位数</li>
 										<li>当数值为 0 时不会产生模糊效果，最小值请从 1 开始</li>
 									</ul>
