--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>慢慢儿玩 - 在线图像编辑工具</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#ed8f31">
+<meta name="wd" content="图像编辑">
+<meta name="key" content="图像编辑">
+<meta name="keyword" content="图像编辑">
 
 <link href="./src/bootstrap.min.css" rel="stylesheet">
 <link href="./src/font-awesome.min.css" rel="stylesheet">
