--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2187609098124666",
+    enable_page_level_ads: true
+  });
+</script>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 <title>慢慢儿玩 - 在线图像编辑工具</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
