--- a/FE-Img/canvas.html
+++ b/FE-Img/canvas.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+	<title>慢慢儿玩 - 在线图像编辑工具</title>
 	<meta charset="UTF-8">
 	<script src="./alloyimage-1.1.js"></script>
 	<script src="./BaseObj.js"></script>
