--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				</div>
 				<div class="page-header-main-cta">
 					<a  href="./FE-Img/canvas.html" target="_blank" class="cta-download">
-						立即体验
+						立即使用
 					</a>
 				</div>
 			</section>
